# emu8086

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake_build.sh  main.cpp  roadmap.md
assembler/: assembler.cpp  assembler.hpp
cpu/: cpu.hpp  flags.hpp  instructions.cpp  instructions.hpp  memory.cpp  memory.hpp  registers.hpp
disassembler/: disassembler.cpp  disassembler.hpp
examples/: adc_sbb_test.asm  adc_sbb_test2.asm  arithmetic.asm  basic_test.asm  build_test.sh  counter.asm  disassemble_test.cpp  flags_test.asm  flags_test2.asm  hello.asm  shift_rotate.asm  simple.asm  simple_shifts.asm  test_basic.asm  test_instructions.asm  test_jz.asm  test_logical.asm  test_mov_cx.asm  test_shifts.asm  test_shifts_small.asm  test_simple.asm
io/: io.cpp  io.hpp
utils/: utils.cpp  utils.h
